--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0-development",
   "description": "",
   "bin": {},
-  "main": "./src/index.js",
+  "main": "./dist/index.js",
   "repository": {
     "type": "git",
     "url": "git://github.com/ianwremmel/tracks-interactor.git"
@@ -11,12 +11,14 @@
   "scripts": {
     "build": "npm-run-all build:*",
     "build:readme": "markdown-toc -i --bullets='-' --maxdepth=3  README.md  && prettier --write README.md",
-    "eslint": "eslint --ignore --ignore-path .gitignore",
+    "build:es": "babel --extensions '.js,.ts' -d dist src",
+    "eslint": "eslint --ignore --ignore-path .gitignore --ext .js --ext .ts",
     "lint": "npm-run-all lint:*",
     "lint:changelog": "commitlint --from origin/master --to HEAD",
     "lint:js": "npm run --silent eslint -- .",
+    "lint:types": "tsc",
     "semantic-release": "semantic-release",
-    "test": "echo 'no tests specified'; exit 1"
+    "test": "jest"
   },
   "engines": {
     "node": ">=10"
@@ -26,27 +28,39 @@
   "license": "MIT",
   "dependencies": {},
   "devDependencies": {
+    "@babel/cli": "^7.4.3",
+    "@babel/core": "^7.4.3",
+    "@babel/preset-env": "^7.4.3",
+    "@babel/preset-typescript": "^7.3.3",
     "@commitlint/cli": "^7.5.2",
     "@commitlint/config-conventional": "^7.5.0",
     "@ianwremmel/eslint-plugin-ianwremmel": "^3.0.0",
+    "@types/jest": "^24.0.11",
+    "@types/node": "^11.13.0",
+    "@typescript-eslint/parser": "^1.6.0",
     "condition-circle": "^2.0.2",
     "eslint": "^5.16.0",
     "eslint-config-prettier": "^4.1.0",
     "eslint-plugin-compat": "^3.1.1",
     "eslint-plugin-eslint-comments": "^3.1.1",
     "eslint-plugin-import": "^2.16.0",
+    "eslint-plugin-jest": "^22.4.1",
     "eslint-plugin-markdown": "^1.0.0",
     "eslint-plugin-mocha": "^5.3.0",
     "eslint-plugin-prettier": "^3.0.1",
     "husky": "^1.3.1",
+    "jest": "^24.7.1",
+    "jest-junit": "^6.3.0",
     "lint-staged": "^8.1.5",
     "markdown-toc": "^1.2.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^1.16.4",
-    "semantic-release": "^15.13.3"
+    "semantic-release": "^15.13.3",
+    "typescript": "^3.4.2"
   },
   "lint-staged": {
     "*.js": "npm run eslint -- ",
+    "*.ts": "npm run eslint -- ",
     "bin/**": "npm run eslint -- "
   },
   "husky": {
@@ -57,5 +71,8 @@
   },
   "release": {
     "verifyConditions": "condition-circle"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
