build(semrel): fix release config

--- a/package.json
+++ b/package.json
@@ -76,6 +76,9 @@
     }
   },
   "release": {
+    "branches": [
+      "master"
+    ],
     "verifyConditions": "condition-circle"
   },
   "publishConfig": {
