--- a/package.json
+++ b/package.json
@@ -44,7 +44,6 @@
     "@types/node": "^13.1.0",
     "@typescript-eslint/parser": "^2.0.0",
     "chai": "^4.2.0",
-    "condition-circle": "^2.0.2",
     "eslint": "^5.16.0",
     "eslint-config-prettier": "^4.1.0",
     "eslint-plugin-compat": "^3.1.1",
@@ -79,7 +78,7 @@
     "branches": [
       "master"
     ],
-    "verifyConditions": "condition-circle"
+    "ci": true
   },
   "publishConfig": {
     "access": "public"
