--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -2,29 +2,30 @@ env:
   browser: false
   node: true
 extends:
-  - 'plugin:@ianwremmel/ianwremmel/modern'
+  - plugin:@ianwremmel/ianwremmel/modern
+  - prettier
 overrides:
-  - files:
-      - '*.config.js'
-    env:
+  - env:
       node: true
+    files:
+      - '*.config.js'
     parserOptions:
-      sourceType: 'script'
+      sourceType: script
     rules:
       strict:
         - error
         - global
-  - files:
-      - '**/*.spec.*'
-    env:
+  - env:
       jest: true
+    files:
+      - '**/*.spec.*'
     rules:
       require-jsdoc: off
   - files:
       - '**/*.ts'
     parser: '@typescript-eslint/parser'
     parserOptions:
-      project: './tsconfig.json'
+      project: ./tsconfig.json
     rules:
       import/export: off
       import/named: off
@@ -32,11 +33,10 @@ overrides:
       import/no-deprecated: off
       import/no-unresolved: off
       no-redeclare: off
-      # use as types doesn"t count as used
       no-unused-vars: off
       valid-jsdoc: off
 parserOptions:
-  sourceType: 'module'
+  sourceType: module
 rules:
-  no-restricted-syntax: off
   compat/compat: off
+  no-restricted-syntax: off
