--- a/package.json
+++ b/package.json
@@ -16,10 +16,10 @@
     "eslint": "eslint --ignore --ignore-path .gitignore --ext .js --ext .ts",
     "lint": "npm-run-all lint:*",
     "lint:changelog": "commitlint --from origin/master --to HEAD",
-    "lint:js": "npm run --silent eslint -- .",
     "lint:types": "tsc --noEmit",
     "semantic-release": "semantic-release",
-    "test": "jest"
+    "test": "jest",
+    "lint:es": "npm run --silent eslint -- ."
   },
   "engines": {
     "node": ">=10"
@@ -38,28 +38,28 @@
     "@babel/preset-typescript": "^7.3.3",
     "@commitlint/cli": "^8.3.5",
     "@commitlint/config-conventional": "^8.3.4",
-    "@ianwremmel/eslint-plugin-ianwremmel": "^3.0.0",
+    "@ianwremmel/eslint-plugin-ianwremmel": "^4.0.2",
     "@types/chai": "^4.1.7",
     "@types/jest": "^25.1.0",
     "@types/node": "^14.0.1",
+    "@typescript-eslint/eslint-plugin": "^3.0.2",
     "@typescript-eslint/parser": "^3.0.2",
     "chai": "^4.2.0",
-    "eslint": "^5.16.0",
-    "eslint-config-prettier": "^4.1.0",
-    "eslint-plugin-compat": "^3.1.1",
-    "eslint-plugin-eslint-comments": "^3.1.1",
-    "eslint-plugin-import": "^2.16.0",
-    "eslint-plugin-jest": "^23.0.1",
-    "eslint-plugin-markdown": "^1.0.0",
-    "eslint-plugin-mocha": "^5.3.0",
-    "eslint-plugin-prettier": "^3.1.0",
+    "eslint": "^7.1.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-compat": "^3.7.0",
+    "eslint-plugin-eslint-comments": "^3.2.0",
+    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-markdown": "^1.0.2",
+    "eslint-plugin-mocha": "^6.3.0",
+    "eslint-plugin-prettier": "^3.1.3",
     "husky": "^4.0.0",
     "jest": "^26.0.1",
     "jest-junit": "^10.0.0",
     "lint-staged": "^10.2.7",
     "markdown-toc": "^1.2.0",
     "npm-run-all": "^4.1.5",
-    "prettier": "^1.16.4",
+    "prettier": "^2.0.5",
     "semantic-release": "^17.0.1",
     "typescript": "^3.4.2"
   },
