--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
   "scripts": {
     "build": "npm-run-all build:*",
     "build:readme": "markdown-toc -i --bullets='-' --maxdepth=3  README.md  && prettier --write README.md",
-    "build:es": "babel --source-maps --ignore '**/*.d.ts' --extensions '.js,.ts' -d dist src",
-    "build:types": "tsc --emitDeclarationOnly",
+    "build:es": "babel --copy-files --source-maps --ignore '**/*.snap' --ignore '**/*.d.ts' --ignore '**/*.spec.*' --ignore '**.*.test.*' --extensions '.ts,.js,.jsx,.tsx' -d dist src",
+    "build:types": "tsc --emitDeclarationOnly --outDir dist",
     "eslint": "eslint --ignore --ignore-path .gitignore --ext .js --ext .ts",
     "lint": "npm-run-all lint:*",
     "lint:changelog": "commitlint --from origin/master --to HEAD",
@@ -32,16 +32,18 @@
     "immer": "^6.0.0"
   },
   "devDependencies": {
-    "@babel/cli": "^7.4.3",
-    "@babel/core": "^7.4.3",
-    "@babel/preset-env": "^7.4.3",
-    "@babel/preset-typescript": "^7.3.3",
+    "@babel/cli": "^7.10.1",
+    "@babel/core": "^7.10.2",
+    "@babel/plugin-proposal-optional-chaining": "^7.10.1",
+    "@babel/preset-env": "^7.10.2",
+    "@babel/preset-typescript": "^7.10.1",
+    "@babel/register": "^7.10.1",
     "@commitlint/cli": "^8.3.5",
     "@commitlint/config-conventional": "^8.3.4",
     "@ianwremmel/eslint-plugin-ianwremmel": "^4.0.2",
     "@types/chai": "^4.1.7",
     "@types/jest": "^25.1.0",
-    "@types/node": "^14.0.1",
+    "@types/node": "^12.12.42",
     "@typescript-eslint/eslint-plugin": "^3.0.2",
     "@typescript-eslint/parser": "^3.0.2",
     "chai": "^4.2.0",
@@ -61,7 +63,7 @@
     "npm-run-all": "^4.1.5",
     "prettier": "^2.0.5",
     "semantic-release": "^17.0.1",
-    "typescript": "^3.4.2"
+    "typescript": "^3.9.3"
   },
   "lint-staged": {
     "*.js": "npm run eslint -- ",
@@ -82,5 +84,8 @@
   },
   "publishConfig": {
     "access": "public"
-  }
+  },
+  "files": [
+    "dist/**/*"
+  ]
 }
