--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -21,6 +21,13 @@ overrides:
     rules:
       '@typescript-eslint/ban-ts-comment': off
       '@typescript-eslint/explicit-module-boundary-types': off
+      no-use-before-define: off
+      '@typescript-eslint/no-use-before-define':
+        - error
+        - classes: true
+          functions: false
+          variables: true
+
 parserOptions:
   sourceType: module
 rules:
