--- a/package.json
+++ b/package.json
@@ -28,8 +28,7 @@
   "author": "Ian Remmel <1182361+ianwremmel@users.noreply.github.com>",
   "license": "MIT",
   "dependencies": {
-    "@ianwremmel/exception": "^3.1.4",
-    "immer": "^7.0.0"
+    "@ianwremmel/exception": "^3.1.4"
   },
   "devDependencies": {
     "@babel/cli": "^7.10.1",
